# gaden_timeseries

./: README.md
embedded_software/garden/: .gitignore  CMakeLists.txt
embedded_software/garden/app/: CMakeLists.txt  main.c
embedded_software/garden/freertos/: FreeRTOSConfig.h
embedded_software/garden/scripts/: open_vscode.sh  run.sh  start_project.sh
notebooks/: EDA.ipynb  EDA_dani.ipynb  ensemble.ipynb  model.ipynb  models.ipynb  preprocessing.ipynb  utils.py
